<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:paddingVertical="40dp"
    android:paddingHorizontal="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <EditText
            android:id="@+id/edit_distance"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/distance"
            android:inputType="numberDecimal"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_kms"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <EditText
            android:id="@+id/edit_price"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/price"
            android:inputType="numberDecimal"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price_per_liter"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <EditText
            android:id="@+id/edit_auto"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/autonomy"
            android:inputType="numberDecimal"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/km_per_liter"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:text="@string/your_total_spent"
            android:textSize="22sp"/>

        <TextView
            android:id="@+id/edit_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_spent"
            android:textSize="28sp"
            android:layout_marginTop="10dp"/>

    </LinearLayout>

    <Button
        android:id="@+id/edit_btn_calc"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:text="@string/calc"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:backgroundTint="@color/lightGreen"
        android:layout_marginTop="10dp"/>

</LinearLayout>